--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -481,6 +481,38 @@ $switch-border-disabled:                     1px solid $basic-btn !default;
 
 $switch-background-disabled-icon:            $basic-btn !default;
 
+// ----------------------------------------------------------------
+// ----------------------------------------------------------------
+// ----------------------------------------------------------------
+
+// datePicker
+
+// basic
+$date-picker-line-height:                         $line-height-border !default;
+
+// normal
+$date-picker-background:                          $element-background !default;
+$date-picker-color:                               $words-normal !default;
+$date-picker-border:                              1px solid $basic-btn !default;
+
+// hover
+$date-picker-background-hover:                    $btn-hover !default;
+$date-picker-color-hover:                         $words-normal !default;
+
+// active
+$date-picker-background-active:                   $part-plate !default;
+$date-picker-color-active:                        $words-normal !default;
+$date-picker-border-active:                              1px solid $basic-btn !default;
+
+// focus
+$date-picker-color-focus:                         $words-high-light !default;
+$date-picker-border-focus:                        1px solid $words-high-light !default;
+
+// disable
+$date-picker-background-disabled:                 $element-background !default;
+$date-picker-color-disabled:                      $words-disable !default;
+$date-picker-border-disabled:                     1px solid $basic-btn !default;
+
 
 
 
