feat: TimePicker component

--- a/src/components/DatePicker/_style.scss
+++ b/src/components/DatePicker/_style.scss
@@ -77,11 +77,21 @@
 
 // dropdown
 .frc-date-picker-dropdown.ant-picker-dropdown {
+  &.ant-picker-dropdown-range {
+    padding: 0;
+  }
+  .ant-picker-range-arrow {
+    // &::after {
+    //   border-color: $basic-btn $basic-btn transparent transparent;
+    // }
+    display: none;
+  }
   .ant-picker-panel-container {
     background: $date-picker-background;
     box-shadow: none;
     border: 1px solid $btn-hover;
     padding: 0 4px;
+    // normal
     .ant-picker-panel {
       border: none;
       // header
@@ -92,7 +102,6 @@
         font-size: 12px;
         line-height: 24px;
         margin-top: 1px;
-        // margin-bottom: 2px;
         .ant-picker-header-view {
           line-height: 24px;
         }
@@ -232,12 +241,16 @@
         .ant-picker-now-btn {
           font-size: 12px;
           text-decoration: none !important;
+          color: $words-normal;
         }
         .ant-picker-footer-extra {
           // border-top: 1px solid $basic-btn;
           color: $words-normal;
           font-size: 12px;
           padding: 0;
+          &:not(:last-child) {
+            border-bottom: 1px solid $basic-btn;
+          }
         }
       }
       // day
@@ -254,6 +267,12 @@
           .ant-picker-cell-end {
             &::after {
               display: none;
+            }
+          }
+          .ant-picker-cell {
+            .ant-picker-cell-inner {
+              width: auto;
+              height: auto;
             }
           }
         }
@@ -379,12 +398,16 @@
         }
       }
     }
+    // range footer
     .ant-picker-panels + .ant-picker-footer {
       .ant-picker-footer-extra {
         border-top: 1px solid $basic-btn;
         color: $words-normal;
         font-size: 12px;
         padding: 0 8px;
+        &:not(:last-child) {
+          border-bottom: 1px solid transparent;
+        }
       }
       .ant-picker-ranges {
         border-top: 1px solid $basic-btn;
