--- a/src/styles/_reboot.scss
+++ b/src/styles/_reboot.scss
@@ -14,16 +14,16 @@ body {
 
 // ----------------------------------------------------------------
 
-// Links
-a {
-  color: $link-color !important;
-  text-decoration: $link-decoration !important;
+// // Links
+// a {
+//   color: $link-color !important;
+//   text-decoration: $link-decoration !important;
 
-  &:hover {
-    color: $link-hover-color !important;
-    text-decoration: $link-hover-decoration !important;
-  }
-}
+//   &:hover {
+//     color: $link-hover-color !important;
+//     text-decoration: $link-hover-decoration !important;
+//   }
+// }
 
 // ----------------------------------------------------------------
 
