--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -509,6 +509,11 @@ $date-picker-color-icon-disabled:                 $words-disable !default;
 $modal-line-height:                               $line-height-base !default;
 $modal-min-height:                                $line-height-base !default;
 $modal-border-radius:                             $border-radius-lg !default;
+$modal-font-weight:                               $font-weight-base !default;
+
+$modal-font-size-title:                           $font-size-medium !default;
+$modal-font-size-text:                            $font-size-base !default;
+
 
 // normal
 $modal-background:                                $basic-plate !default;
