--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -40,6 +40,12 @@
   }
   &:disabled,
   &.disabled {
+    * {
+      cursor: not-allowed !important;
+      color: $disable-color !important;
+      background: $disable-background !important;
+    }
+    cursor: not-allowed !important;
     color: $disable-color !important;
     background: $disable-background !important;
   }
@@ -625,9 +631,18 @@
 
 // ----------------------------------------------------------------
 
-@mixin modal-style($background, $color, $border, $border-radius) {
+@mixin modal-style(
+  $background,
+  $color,
+  $border,
+  $border-radius,
+  $font-size,
+  $font-weight
+) {
   background: $background;
   color: $color;
   border: $border;
   border-radius: $border-radius;
+  font-size: $font-size;
+  font-weight: $font-weight;
 }
