--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -1,6 +1,3 @@
-.storybook-demo .frc-btn {
-  margin: 8px 8px 8px 0;
-}
 .frc-btn.ant-btn {
   display: inline-block;
   vertical-align: top;
@@ -14,7 +11,6 @@
 
   .anticon {
     line-height: 0;
-    vertical-align: -0.2em;
   }
 
   @include button-size(
@@ -35,8 +31,7 @@
     $words-disable
   );
 
-  &.frc-btn-work-default,
-  &.frc-btn-work-high-light {
+  &.frc-btn-work-default {
     color: $words-high-light;
     background: linear-gradient(
       $btn-background-normal-top,
@@ -70,7 +65,7 @@
 }
 
 // animation
-[ant-click-animating-without-extra-node="true"]::after,
+[ant-click-animating-without-extra-node='true']::after,
 .ant-click-animating-node {
   box-shadow: none !important;
 }
@@ -121,6 +116,9 @@
     flex-direction: row;
     align-items: center;
   }
+  // &.frc-btn-icon-only {
+  //   padding-left: 6px;
+  // }
   &.frc-btn-work-default {
     @include button-style(
       $btn-background-primary,
@@ -188,7 +186,6 @@
 
 // link
 .frc-btn.frc-btn-link {
-  background-color: transparent;
   @include button-style(
     $btn-background-link,
     $link-color,
@@ -203,17 +200,4 @@
     text-decoration: $link-decoration;
   }
   padding: 0;
-  &.frc-btn-work-default,
-  &.frc-btn-work-high-light {
-    @include button-style(
-      transparent,
-      $link-hover-color,
-      transparent,
-      $link-hover-color,
-      transparent,
-      $link-hover-color,
-      transparent,
-      $link-disable-color
-    );
-  }
 }
