fix: public path

--- a/src/components/DatePicker/_style.scss
+++ b/src/components/DatePicker/_style.scss
@@ -42,8 +42,7 @@
       display: none;
     }
     &::after {
-      // content: url("../../../public/close.svg");
-      content: url("../public/close.svg");
+      content: url("../../../public/close.svg");
     }
   }
   @include date-picker-style(
