--- a/src/components/Button/_style.scss
+++ b/src/components/Button/_style.scss
@@ -1,6 +1,4 @@
-@import 'antd/dist/antd.css';
-
-.storybook-demo .frc-btn {
+.storybook-demo > .frc-btn {
   margin: 8px 8px 8px 0;
 }
 .frc-btn.ant-btn {
