--- a/src/components/TimePicker/_style.scss
+++ b/src/components/TimePicker/_style.scss
@@ -8,7 +8,10 @@
     $date-picker-color-icon,
     // hover
     $date-picker-background-hover,
+    $date-picker-color-hover,
+    $date-picker-border-hover,
     // focus
+    $date-picker-background-focus,
     $date-picker-color-focus,
     $date-picker-border-focus,
     // disable
@@ -21,6 +24,13 @@
 
 // dropdown
 .frc-date-picker-dropdown.ant-picker-dropdown.frc-time-picker-dropdown {
+  .ant-picker-footer {
+    padding-left: 0px !important;
+    .ant-picker-footer-extra {
+      line-height: 32px;
+    }
+  }
+
   .ant-picker-panel-container {
     .ant-picker-time-panel {
       margin-left: 0px;
