--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,3 +40,9 @@
 // modal
 @import '../components/Modal/style';
 
+// loading
+@import '../components/Loading/style';
+
+// error
+@import '../components/Error/style';
+
